[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/sprites/2 - Twiggy/Idle (32 x 32).png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/2 - Twiggy/Falling (32 x 32).png" type="Texture" id=2]
[ext_resource path="res://elements/jugador/player.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/2 - Twiggy/Running (32 x 32).png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/2 - Twiggy/Jumping (32 x 32).png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/2 - Twiggy/Hurt_&_Recovery (32 x 32).png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/2 - Twiggy/Sleeping_&_Wakeup (32 x 32).png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/2 - Twiggy/Victory_Pose (32 x 32).png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 1 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ) ],
"loop": true,
"name": "win",
"speed": 3.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": false,
"name": "falling",
"speed": 3.0
}, {
"frames": [ SubResource( 8 ), null, SubResource( 9 ), null, SubResource( 12 ), null, SubResource( 9 ), null, SubResource( 4 ), null ],
"loop": true,
"name": "hurt",
"speed": 8.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 14.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 16, 26 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 18, 28 )

[node name="player" type="KinematicBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
velocidad = 280
gravedad = 1200
f_salto = 600
BOUNCING_JUMP = 420

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 19 )
animation = "win"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 22 )
shape = SubResource( 20 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 22 )
shape = SubResource( 21 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
